--- a/NextServer/NextServer.csproj
+++ b/NextServer/NextServer.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\Redis\Redis.csproj" />
+    <ProjectReference Include="..\Services\Services.csproj" />
     <ProjectReference Include="..\Sql\Sql.csproj" />
   </ItemGroup>
 
