--- a/NextServer/NextServer.csproj
+++ b/NextServer/NextServer.csproj
@@ -16,5 +16,14 @@
     <ProjectReference Include="..\Sql\Sql.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="configuration.yaml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="dockerfile">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 
 </Project>
