--- a/Helm/next-chat/templates/tests/auto-tests.yaml
+++ b/Helm/next-chat/templates/tests/auto-tests.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
   - name: next-chat-tests
-    image: "next-chat/tests:latest"
+    image: "grayscale/next-chat-tests:latest"
     imagePullPolicy: {{ .Values.imagePullPolicy }}
     env:
       - name: nextChat__uri
